--- a/src/Styles/_stylesComponentAnt.less
+++ b/src/Styles/_stylesComponentAnt.less
@@ -37,3 +37,11 @@
 .ant-menu-submenu-arrow {
   color: inherit;
 }
+
+.ant-table-thead tr .ant-table-cell {
+  font-size: 16px;
+}
+
+.ant-table-tbody tr:nth-child(even) {
+  background-color: #fff2e7;
+}
