--- a/src/Styles/_stylesComponentAnt.less
+++ b/src/Styles/_stylesComponentAnt.less
@@ -73,3 +73,25 @@
 .ant-input-number {
   border-radius: 8px;
 }
+
+.ant-popover-title {
+  padding: 0px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.ant-popover-inner {
+  border-radius: 10px;
+}
+
+.ant-popover-inner-content {
+  padding: 0;
+}
+
+.ant-modal-content {
+  border-radius: 24px;
+}
+
+.ant-modal-body {
+  padding: 0;
+}
