--- a/src/Styles/_stylesComponentAnt.less
+++ b/src/Styles/_stylesComponentAnt.less
@@ -95,3 +95,30 @@
 .ant-modal-body {
   padding: 0;
 }
+
+.Calendar__day.-ltr.-selectedStart {
+  border-radius: 8px !important;
+}
+
+.Calendar__day.-ltr.-selectedEnd {
+  border-radius: 8px !important;
+}
+
+.Calendar__day.-selected {
+  border-radius: 8px !important;
+}
+
+.Calendar__weekDays {
+  color: #ff9138 !important;
+  font-weight: 700;
+  font-size: 14px !important;
+  line-height: 19px;
+}
+
+.Calendar__monthText,
+.Calendar__yearText {
+  color: #ff7506;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+}
